--- a/components/blogCard/template.html
+++ b/components/blogCard/template.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="w-full min-w-2xs max-w-[400px] lg:max-w-xs rounded-xl outline-1 outline-offset-[-1px] outline-slate-200 flex flex-col justify-start items-start overflow-hidden">
+<div class="w-full min-w-2xs max-w-[400px] lg:max-w-xs xl:max-w-none rounded-xl outline-1 outline-offset-[-1px] outline-slate-200 flex flex-col justify-start items-start overflow-hidden">
     <a href="#" class="w-full block">
         <img src="{{ imageUrl }}" class="w-full object-cover h-44 relative">
     </a>
