--- a/adminv2/templates/adminv2/messaging/partials/messages.html
+++ b/adminv2/templates/adminv2/messaging/partials/messages.html
@@ -45,3 +45,62 @@
         {% endfor %}
     </tbody>
 </table>
+
+{% if messages.paginator.num_pages > 1 %}
+    <nav aria-label="pagination" class="my-3">
+    <ul class="inline-flex -space-x-px text-base h-10">
+        
+        {# Previous button #}
+        {% if messages.has_previous %}
+        <li>
+        <button type="button" onclick="handleSearch(event, {{messages.previous_page_number}})" 
+            class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700">
+            Previous
+        </button>
+        </li>
+        {% else %}
+        <li>
+        <span class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-300 bg-white border border-e-0 border-gray-300 rounded-s-lg cursor-not-allowed">
+            Previous
+        </span>
+        </li>
+        {% endif %}
+
+        {# Page numbers #}
+        {% for num in messages.paginator.page_range %}
+        {% if num == messages.number %}
+        <li>
+            <span aria-current="page" 
+                class="flex items-center justify-center px-4 h-10 text-blue-600 border border-gray-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700">
+            {{ num }}
+            </span>
+        </li>
+        {% else %}
+        <li>
+            <button type="button" onclick="handleSearch(event, {{ num }})" 
+            class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700">
+            {{ num }}
+            </button>
+        </li>
+        {% endif %}
+        {% endfor %}
+
+        {# Next button #}
+        {% if has_next %}
+        <li>
+        <button type="button"  onclick="handleSearch(event, {{messages.next_page_number}})" 
+            class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700">
+            Next
+        </button>
+        </li>
+        {% else %}
+        <li>
+        <span class="flex items-center justify-center px-4 h-10 leading-tight text-gray-300 bg-white border border-gray-300 rounded-e-lg cursor-not-allowed">
+            Next
+        </span>
+        </li>
+        {% endif %}
+
+    </ul>
+    </nav>
+{% endif %}
